[package]
name          = "rmcll"
version       = "0.1.0"
authors       = ["Yanbing Zhao <zzzz@mail.ustc.edu.cn>"]

[dependencies]
futures       = "0.1"
hyper         = "0.11"
hyper-tls     = "0.1"
serde         = "1.0"
serde_derive  = "1.0"
serde_json    = "1.0"
tokio-core    = "0.1"
uuid          = { version = "0.4", features = ["serde", "v4", "v5"] }
zip           = "0.2"
